// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should match snapshot when empty 1`] = `
<span
  class="root sizeScale4 alignLeft"
/>
`;

exports[`<Text /> should match snapshot with text 1`] = `
<span
  class="root sizeScale4 alignLeft"
>
  Hello World
</span>
`;

exports[`<Text /> when muted should match snapshot 1`] = `
<span
  class="root sizeScale4 muted alignLeft"
>
  Hello World
</span>
`;
